Support JDK 17